Fix style for spacing and width

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -36,7 +36,7 @@
     position: absolute;
     bottom: 0;
     left: 50%;
-    width: 5rem;
+    width: 3rem;
     height: 2px;
     background-color: $color-secondary;
     transform: translateX(-50%);
